--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tejal-tambe.github.io/Tejal-Tambe",
   "name": "keepshopping",
   "version": "0.1.0",
   "private": false,
@@ -10,10 +11,13 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "serve": "^14.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts --max_old_space_size=16384 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
