packages changes committed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tejal-tambe.github.io/Tejal-Tambe",
+  "homepage": "https://Tejal-Tambe.github.io/e-commerce",
   "name": "keepshopping",
   "version": "0.1.0",
   "private": false,
